import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from '../../components/ExpensesSummary';

test('should correctly render  ExpensesSummary with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={235} />);
    expect(wrapper).toMatchSnapshot();
});

test('hould correctly render  ExpensesSummary with multiple  expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={32} expensesTotal={23123123125} />);
    expect(wrapper).toMatchSnapshot();
});