// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hould correctly render  ExpensesSummary with multiple  expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        32
      </span>
       
      expenses
       totalling 
      <span>
        $231,231,231.25
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        AddExpense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render  ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        AddExpense
      </Link>
    </div>
  </div>
</div>
`;
